# inacap.diseno_desarrollo_soluciones

./: README.md  RUN.bat  basedatos.xml  db.sqbpro  ev1_requerimientos.txt  issues.md  notas_doc.txt  permisos_y_tareas.txt  setup.bat
XML/: DBS.sql  basedatos.xml  permisos.sql  permisos.xml  servicios_productos.sql
media/productos/: OIP.jfif
punto_venta/: apps.py  forms.py  models.py  signals.py  views.py
punto_venta/migrations/: 0001_initial.py  0002_alter_persona_correo_electronico.py  0002_alter_servicio_tiempo.py  0002_remove_servicio_imagen.py  0003_alter_servicio_empleados.py  0003_producto_descripcion.py  0004_alter_boleta_monto_iva_alter_boleta_monto_neto_and_more.py  0004_producto_imagen_alter_boleta_monto_iva_and_more.py  0005_alter_producto_descripcion.py  0005_merge_20231129_0059.py  0006_alter_producto_descripcion.py  0007_persona_contrasena_persona_correo_electronico_and_more.py  0008_rename_precio_venta_boleta_producto_monto_unidad_and_more.py
salon_de_belleza/: pyproject.toml  settings.py  urls.py
salon_de_belleza/punto_venta/: admin.py  models.py
salon_de_belleza/punto_venta/migrations/: 0001_initial.py
salon_de_belleza/salon_de_belleza/: settings.py
staticfiles/punto_venta/: signin.css
templates/: base.html
templates/ citas/: actualizar.html  crear.html  detalle.html  eliminar.html  lista.html
templates/admin/: cliente_detalle.html  clientes.html
templates/boleta/: actualizar.html  crear.html  detalle.html  form.html  lista.html
templates/cliente/: actualizar.html  card.html  cita.html  citas.html  crear.html  detalle.html  (+8 more)
(+43 files in other folders)
