[tool.poetry]
name = "django.salon_de_belleza"
version = "0.1.0"
description = "Dependencias del proyecto de django del salon de belleza"
authors = ["."]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
